fix: 🎨 align to tabs

--- a/src/pages/objkt-display/styles.module.scss
+++ b/src/pages/objkt-display/styles.module.scss
@@ -46,7 +46,7 @@
 
 .infos_attributes_container,
 .infos_container {
-  margin: 0 1.5em;
+  margin: 0 16px;
 }
 .infos_container > {
   div {
